--- a/src/app/shopping-list/shoping-list.component.html
+++ b/src/app/shopping-list/shoping-list.component.html
@@ -1,18 +1,15 @@
 <div class="row">
   <div class="col-xs-10">
-    <app-shopping-edit
-      (onNewItem)="addIngredient($event)"
-      (onRemoveItem)="removeIngredient($event)"
-    ></app-shopping-edit>
+    <app-shopping-edit></app-shopping-edit>
   </div>
   <hr />
   <div class="col-xs-10">
     <ul class="list-group">
       <a
-        href="#"
         class="list-group-item"
         style="cursor: pointer"
-        *ngFor="let ingredient of ingredients"
+        *ngFor="let ingredient of ingredients; let i = index"
+        (click)="editIngredient(i)"
       >
         {{ ingredient.name }} ({{ ingredient.amount }})
       </a>
